@@ -1,3 +1,8 @@
+
+Jun 24, 2007 - chris
+o finished the port to Windows CE. Solution files are in the wince 
+    directory (configured for STANDARDSDK 5.0 (x86))
+
 Jun 20, 2007 - chris
 o improved the caching of extended keys; the cache is now purged when it's
     too full
